Scheduling.html mobile design elements

--- a/src/pages/services/services.html
+++ b/src/pages/services/services.html
@@ -36,7 +36,7 @@
           <button class="mobile-service-btn" data-category="pads">Pads</button>
           <button class="mobile-service-btn" data-category="laminitis-rehabilitation">Laminitis Rehabilitation</button>
           <button class="mobile-service-btn" data-category="hoof-treatments">Hoof Treatments</button>
-          <button class="mobile-service-btn" data-category="therapeutic-hoof-boots">Therapeutic Hoof Boots</button>
+          <button class="mobile-service-btn" data-category="therapeutic-hoof-boots">Therapeutic Boots</button>
           <button class="mobile-service-btn" data-category="call-fee">Call Fee</button>
           <button class="mobile-service-btn" data-category="emergency-services">Emergency Services</button>
           <button class="mobile-service-btn" data-category="additional-services">Additional Services</button>
@@ -450,6 +450,8 @@
       <div class="mobile-overlay-content">
         <button id="overlay-close" class="overlay-close">×</button>
         <div id="overlay-body"></div>
+        <!-- New bottom close button -->
+        <button id="overlay-close-bottom" class="overlay-close-bottom">Close</button>
       </div>
     </div>
 
